product review updated

--- a/src/views/Product_Review/ProductReview.css
+++ b/src/views/Product_Review/ProductReview.css
@@ -10,7 +10,7 @@
 
 .card1 {
     border-right: 1px solid #dbdade;
-    margin-bottom: 20px;
+    margin-bottom: 0.5rem;
     /* width:"41.6%"; */
 }
 
