Analytics page updated

--- a/src/views/analytics/Analytics.css
+++ b/src/views/analytics/Analytics.css
@@ -1,9 +1,80 @@
+button:focus {
+    outline: none !important;
+    background-color: transparent !important;
+    border: none !important;
+}
+
 .topCountryOuterDiv {
     width: 200px;
     aspect-ratio: 1/1;
-    background-image: conic-gradient(rgba(90, 200, 140, 255) 10deg, rgba(220, 246, 232, 255) 5deg, rgba(220, 246, 232, 255) 345deg);
     padding: 25px;
     margin-bottom: 10px;
+}
+
+.allcontinents {
+    background-image: conic-gradient(rgba(192, 192, 194, 255) 20deg, rgba(227, 227, 227, 255) 5deg, rgba(227, 227, 227, 255) 335deg);
+}
+
+.africa {
+    background-image: conic-gradient(rgba(255, 182, 114, 255) 90deg, rgba(255, 239, 225, 255) 5deg, rgba(255, 239, 225, 255) 265deg);
+}
+
+.antarctica {
+    background-image: conic-gradient(rgba(111, 228, 242, 255) 120deg, rgba(214, 247, 251, 255) 5deg, rgba(214, 247, 251, 255) 235deg);
+}
+
+.asia {
+    background-image: conic-gradient(rgba(236, 107, 108, 255) 50deg, rgba(251, 227, 228, 255) 5deg, rgba(251, 227, 228, 255) 305deg);
+}
+
+.australia {
+    background-image: conic-gradient(rgba(255, 255, 56, 255) 180deg, rgba(255, 255, 214, 255) 5deg, rgba(255, 255, 214, 255) 175deg);
+}
+
+.europe {
+    background-image: conic-gradient(rgba(116, 105, 239, 255) 120deg, rgba(232, 230, 252, 255) 5deg, rgba(232, 230, 252, 255) 235deg);
+}
+
+.northamerica {
+    background-image: conic-gradient(rgba(90, 200, 140, 255) 40deg, rgba(220, 246, 232, 255) 5deg, rgba(220, 246, 232, 255) 315deg);
+}
+
+.southamerica {
+    background-image: conic-gradient(rgba(22, 19, 235, 255) 100deg, rgba(223, 222, 252, 255) 5deg, rgba(223, 222, 252, 255) 255deg);
+
+}
+
+.allcontinentsbtn {
+    background: rgba(192, 192, 194, 255);
+}
+
+.africabtn {
+    background: rgba(255, 182, 114, 255);
+}
+
+.antarcticabtn {
+    background: rgba(111, 228, 242, 255);
+}
+
+.asiabtn {
+    background: rgba(236, 107, 108, 255);
+}
+
+.australiabtn {
+    background: rgba(255, 255, 56, 255);
+}
+
+.europebtn {
+    background: rgba(116, 105, 239, 255);
+}
+
+.northamericabtn {
+    background: rgba(90, 200, 140, 255);
+}
+
+.southamericabtn {
+    background: rgba(22, 19, 235, 255);
+
 }
 
 .topCountryInnerDiv {
@@ -12,35 +83,27 @@
     background-color: white;
 }
 
+.no-border-rate {
+    border: none !important;
+    outline: none !important;
+}
+
 .no-border {
-    width: 100px;
+    min-width: 100px;
     border: none;
     outline: none;
     box-shadow: none;
     padding: 5px 10px;
-    /* Add padding to the select */
 }
 
-/* Hide the default arrow icon */
-.no-border::-ms-expand {
-    display: none;
+.months {
+    display: flex;
+    justify-content: center;
 }
 
-/* Add a custom arrow icon */
-.no-border:after {
-    content: '▼';
-    position: absolute;
-    top: 50%;
-    right: 10px;
-    transform: translateY(-50%);
-}
-
-/* Customize the dropdown menu */
-.no-border option {
+select {
     margin: 10px;
-    /* Space between options */
 }
-
 
 @media screen and (max-width: 350px) {
     .topCountryOuterDiv {
