--- a/src/views/CreateCampaign/createcampaign.css
+++ b/src/views/CreateCampaign/createcampaign.css
@@ -20,10 +20,11 @@ small{
     margin-top:20px ;
     font-size: 13px;
 }
+
 .much{
     font-size: 20px;
     border: 1px solid #C6C6C6;
-    padding: 1px 8px;
+    padding: 0px 6px 0px 6px;
 }
 
 .contain-value .item-contain:hover{
@@ -39,7 +40,9 @@ small{
     width: 70px;
     padding: 8px;
 }
-
+.email{
+    background: hwb(124 47% 12%);
+}
 .contain-value .img-bg img{
     width: 100%; 
     height: 100%;
@@ -65,23 +68,31 @@ small{
     position: relative;
     top: 38%;
     left: -10%;
-    height: 23px;
-    width: 30px;
+    height: 20px;
+    width: 25px;
 }
 .filter img{
     height: 100%;
     width: 100%;
-    
+      
 }
 .searchbar{
-   width: 90%;
+margin-left: 50px;
+width: 65%;
 }
 .tal-val{
     padding: 5px;
 }
 .searchbarwidth{
     border-radius: 15px;
-    margin-top:12px;
+    margin-top: 8px;
     padding: 9px;
+}
+.heading-1{
+    margin-left: 167px;
+}
+.t-style{
+    font-size: 11px;
+    font-weight: 600;
 }
 
