--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,4 @@
 @import '../node_modules/prismjs/themes/prism-tomorrow';
 @import './assets/scss/app.scss';
+
+@import url('https://fonts.googleapis.com/css2?family=Cuprum:wght@500&display=swap');
