--- a/src/views/dashboard/components/news/news.css
+++ b/src/views/dashboard/components/news/news.css
@@ -1,4 +1,4 @@
 .feedToggle {
-    color: rgba(116, 105, 239, 255);
+    color: rgba(116, 105, 239, 255) !important;
     border-bottom: 2px solid rgba(116, 105, 239, 255)
 }
