--- a/src/views/dashboard/components/stats/stats.css
+++ b/src/views/dashboard/components/stats/stats.css
@@ -3,8 +3,8 @@
 }
 
 .statsCount {
-    letter-spacing: 2px;
-    transform: scale(1, 1.3);
+    /* letter-spacing: 2px; */
+    transform: scale(1, 1.2);
 }
 
 .statsLogoReach {
