--- a/src/views/home/components/Hero/hero.css
+++ b/src/views/home/components/Hero/hero.css
@@ -1,8 +1,68 @@
 #heroHeading {
-    color: black;
-    width: 600px;
-    font-size: 40px;
-    font-weight: 900 !important;
+    max-width: 600px;
+    text-align: center;
     margin: 0 auto;
-    margin-bottom: 100px;
+    margin-bottom: 20px;
+}
+
+.h1Heading {
+    color: black !important;
+    font-size: 35px !important;
+    font-weight: 900 !important;
+}
+
+.hero {
+    min-height: 400px;
+}
+
+.carousel-control-next .visually-hidden {
+    color: black;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: rgb(88, 88, 88);
+    color: yellow !important;
+    opacity: 0.1;
+}
+
+.carousel-control-prev-icon:hover,
+.carousel-control-next-icon:hover {
+    background-color: rgb(88, 88, 88);
+    opacity: 1;
+
+}
+
+.carousel-control-prev {
+    left: 0px;
+}
+
+.carousel-control-next {
+    right: 0px;
+}
+
+.carousel-indicators {
+    display: none;
+}
+
+@media screen and (max-width: 700px) {
+    #heroHeading {
+        font-size: 30px !important;
+        margin-left: 10px;
+        margin-right: 10px;
+        text-wrap: wrap !important;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    #heroHeading {
+        font-size: 20px !important;
+    }
+
+    .h1Heading {
+        font-size: 25px !important;
+    }
 }
