--- a/src/views/home/components/section5/section5.css
+++ b/src/views/home/components/section5/section5.css
@@ -1,10 +1,52 @@
+.testimonialDesc {
+    max-width: 600px;
+}
+
 .profileImg {
     position: absolute;
-    top: 120px;
-    right: 100px;
+    top: 100px;
+    right: 120px;
 }
 
 .profileImg>img {
-    /* box-shadow: 0px 0px 50px -16px rgba(0, 0, 0, 0.75); */
     filter: drop-shadow(0px 0px 20px rgba(0, 0, 0, 0.25));
+}
+
+.companyLogo {
+    width: 40px;
+    aspect-ratio: 1 / 1;
+    border-radius: 50%;
+    background-color: #535353;
+}
+
+@media screen and (max-width: 1200px) {
+    .testimonialDesc {
+        max-width: 100%;
+        font-size: 14px;
+    }
+
+    .section5Content {
+        padding-left: 20px !important;
+    }
+
+    .section5Content>h2 {
+        max-width: 100% !important;
+    }
+
+    .profileImg {
+        background-color: #F6CB4554;
+        position: static !important;
+    }
+
+    .profileImg img {
+        margin-left: 50%;
+        transform: translateX(-50%);
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .profileImg img {
+        width: 80%;
+        margin-bottom: 20px;
+    }
 }
