--- a/src/views/home/components/Navbar/navbar.css
+++ b/src/views/home/components/Navbar/navbar.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    position: relative;
+    /* position: relative; */
 }
 
 .menuBtn {
@@ -20,7 +20,46 @@
 
 .toggleMenu>ul {
     margin-left: 100px;
+    margin-bottom: 0 !important;
 }
+
+.toggleMenu>ul li {
+    cursor: pointer;
+}
+
+.aboutLi, .productLi {
+    position: relative;
+}
+
+.aboutLi>p, .productLi>p {
+    cursor: pointer;
+    overflow: hidden;
+}
+
+.subMenu {
+    position: absolute;
+    width: 400px;
+    background-color: rgb(255, 255, 255);
+    z-index: 2;
+    transition: 0.8s ease-in-out;
+}
+
+.aboutSubMenuDown, .productSubMenuDown {
+    display: block;
+}
+
+.aboutSubMenuUp, .productSubMenuUp {
+    display: none;
+}
+
+.subMenu li {
+    border-bottom: 1px solid rgba(61, 61, 61, 0.3);
+}
+
+.subMenu li:last-child {
+    border-bottom: none;
+}
+
 
 .navBtn {
     margin-left: 100px;
@@ -29,7 +68,7 @@
     align-items: center;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1000px) {
     .homeNav {
         justify-content: space-between;
     }
@@ -41,7 +80,7 @@
 
     .toggleMenu {
         width: 100%;
-        background-color: rgb(236, 236, 236);
+        background-color: rgb(255, 255, 255);
         display: block;
         position: absolute;
         margin-left: 50% !important;
@@ -55,7 +94,7 @@
     }
 
     .toggleMenuUp {
-        top: -500px;
+        top: -800px;
     }
 
     .toggleMenu ul {
@@ -63,14 +102,32 @@
         display: block !important;
     }
 
-    .toggleMenu ul>li {
+    .toggleMenu>ul>li {
         margin: 20px 0;
         text-align: center;
     }
 
+    .subMenu {
+        position: static;
+        margin-left: 50%;
+        transform: translateX(-50%);
+        border: none !important;
+    }
+
+    .subMenu li {
+        border-bottom: none;
+    }
+
     .navBtn {
+        flex-direction: column;
         justify-content: center;
         margin-left: 50% !important;
         transform: translateX(-50%);
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .subMenu {
+        width: 350px;
     }
 }
